<resources>
    <string name="app_name">WearableTFM</string>
    <string name="wearable_app">Wearable App</string>
    <string name="wearable_hello">Hello</string>
    <string name="message_welcome">Bienvenido  a Wearable Health TFM, una app para recolectar la información de tu wearable, gestionar medicinas y ver salud de tus amigos.... </string>
    <string name="access_title">Acceder</string>
    <string name="register_title">Registrarse</string>
    <string name="new_user">Soy nuevo</string>
    <string name="login_email">Escribe correo electronico</string>
    <string name="login_password">Escribe contraseña</string>
    <string name="re_login_password">Reescribe contraseña</string>
    <string name="btn_access">Ingresar</string>
    <string name="btn_send">Enviar</string>
    <string name="btn_save">Guardar</string>
    <string name="forget_password">Olvidaste la contraseña?</string>
    <string name="new_user_title">Registrarse</string>
    <string name="new_user_names">Escribe nombres y apellidos</string>
    <string name="title_permission_notfication">Permiso de notificación</string>
    <string name="text_permission_notfication">Permiso para mostrar notificaciones: Hola, para mantenerte al tanto de nuestras actualizaciones importantes, nos gustaría enviarte notificaciones. ¿Aceptas recibir notificaciones de WearableTFM? </string>
    <string name="profile">Perfil</string>
    <string name="health">Salud</string>
    <string name="medicine">Medicina</string>
    <string name="shared_preferences">sign_vital.ecu</string>
    <string name="health_weight">Kg</string>
    <string name="health_size">Cm</string>
    <string name="health_old">Años</string>
    <string name="update_user">Guardar</string>
    <string name="logout">Cerrar session</string>
    <string name="weight_user">Escribe tu peso en kg</string>
    <string name="size_user">Escribe tu altura en cm</string>
    <string name="old_user">Escoge tu fecha de nacimiento</string>
    <string name="cancel">Cancelar</string>
    <string name="accept">Aceptar</string>
    <string name="name_medicine">Nombre de medicina</string>
    <string name="date_start_medicine">Fecha desde</string>
    <string name="date_finish_medicine">Fecha hasta</string>
    <string name="days_medicine">Dias de medicina</string>
    <string name="monday_letter">L</string>
    <string name="tuesday_letter">M</string>
    <string name="wednesday_letter">X</string>
    <string name="thursday_letter">J</string>
    <string name="friday_letter">V</string>
    <string name="saturday_letter">S</string>
    <string name="sunday_letter">D</string>
    <string name="save">Guardar</string>
    <string name="add_medicine">Agregar medicina</string>
    <string name="medicines">Mis medicinas</string>
    <string name="notifications">Notificaciones</string>

    <string name="have_friends_request"> <u>Tienes solicitudes de amigos pendientes</u> </string>
    <string name="my_friends">Mis amigos</string>
    <string name="dont_have_friends">Aun no tienes amigos agrega uno</string>
    <string name="find_friend_by_name_email">Escribe el nombre o e-mail</string>
    <string name="find_friend">Agrega un amigo</string>
    <string name="geozone_alert_title">Quieres guardar esta gezona para: </string>
    <string name="title_add_friend">Agrega un amigo</string>
    <string name="my_wearables">Mis wearables</string>
    <string name="add_wearable">Agrega un wearable</string>
    <string name="change_password">Cambio de contraseña</string>
    <string name="recover_account">Recuperar cuenta</string>
    <string name="write_code">Escribe el código de tu e-mail</string>

    <!-- FITBIT resources -->
    <string name="fitbit_client_id">23QYFW</string>
    <string name="fitbit_client_secret">24777e6d7ba496cdbb6de070e3038ab8</string>
    <string name="fitbit_redirect_url">https://18.234.175.136/</string>
    <string name="fitbit_secure_key"></string>

    <string name="last_sync">Última sincronización:</string>
    <string name="percentage">%</string>
    <string name="datos_detail">Mis datos</string>
    <string name="login_fitbit_account">Login Fitbit</string>
    <!-- WEARABLES -->
    <string name="wearables_my_data">Mis datos</string>
    <string name="wearables_my_friends_data">Datos de amigos</string>
    <string name="title_from">Datos</string>
    <string name="title_to">de</string>
    <string name="vytal_signal">Signos vitales</string>
    <string name="title_bed_time">Dormirse</string>
    <string name="title_wake_time">Despertarse</string>

    <!-- errors -->
    <string name="error_fill">LLena todos los campos</string>
    <string name="error_medicine_detail">No puede existir dos dias iguales</string>
    <string name="error_dates_same">Fecha hasta no puede ser menor</string>
    <string name="error_not_day_medicine">Debes escoger un dia de la toma de tu medicina</string>
    <string name="error_no_data">No hay datos</string>
    <string name="error_data">Hay datos</string>
    <string name="error_no_have_friends">No tienes amigos, agrega amigos para ver datos</string>
    <string name="error_code">Código no coincide</string>
    <string name="password_error">Contraseñas no coinciden</string>
</resources>