<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="10sp"
        android:gravity="center">
        <TextView
            android:id="@+id/dateDetailMedicine"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="19:00"
            style="@style/bold_medium"/>
        <View
            android:layout_width="0sp"
            android:layout_height="0sp"
            android:layout_weight="1"/>
        <LinearLayout
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="horizontal">
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvMonday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10sp"
                android:layout_marginRight="6sp">

                <TextView
                    android:id="@+id/tvMonday"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/monday_letter"
                    style="@style/bold_large"
                    android:gravity="center"
                    android:padding="3sp"/>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvTuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10sp"
                android:layout_marginRight="6sp">
                <TextView
                    android:id="@+id/tvTuesday"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tuesday_letter"
                    style="@style/bold_large"
                    android:gravity="center"
                    android:padding="3sp"/>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvWednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10sp"
                android:layout_marginRight="6sp">
                <TextView
                    android:id="@+id/tvWednesday"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/wednesday_letter"
                    style="@style/bold_large"
                    android:gravity="center"
                    android:padding="3sp"/>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvThursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10sp"
                android:layout_marginRight="6sp">
                <TextView
                    android:id="@+id/tvThursday"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/tuesday_letter"
                    style="@style/bold_large"
                    android:gravity="center"
                    android:padding="3sp"/>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvFriday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10sp"
                android:layout_marginRight="6sp">
                <TextView
                    android:id="@+id/tvFriday"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/friday_letter"
                    style="@style/bold_large"
                    android:gravity="center"
                    android:padding="3sp"/>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvSaturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10sp"
                android:layout_marginRight="6sp">
                <TextView
                    android:id="@+id/tvSaturday"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/saturday_letter"
                    style="@style/bold_large"
                    android:gravity="center"
                    android:padding="3sp"/>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cvSunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10sp"
                android:layout_marginRight="6sp">
                <TextView
                    android:id="@+id/tvSunday"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/sunday_letter"
                    style="@style/bold_large"
                    android:gravity="center"
                    android:padding="3sp"/>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>