<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPasswordActivity">
    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <include layout="@layout/main_toolbar"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            style="@style/bold_medium"
            android:layout_marginHorizontal="10sp"
            android:layout_marginBottom="16sp"
            android:layout_marginTop="20sp"/>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10sp"
            android:layout_marginBottom="20sp"
            app:strokeWidth="1sp"
            app:strokeColor="@color/yellow_7d"
            android:layout_marginHorizontal="15sp"

            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10sp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="5sp">
                <ImageView
                    android:layout_width="24sp"
                    android:layout_height="24sp"
                    android:src="@drawable/username_icon"
                    android:layout_marginRight="10sp"/>
                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:background="@android:color/transparent"
                    android:hint="@string/login_email"
                    android:imeOptions="actionDone"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green_92"
            android:layout_marginHorizontal="15sp"
            app:cardCornerRadius="10sp"
            android:layout_marginBottom="15sp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_send"
                style="@style/bold_large"
                android:textColor="@color/white"
                android:gravity="center"
                android:paddingVertical="7sp"/>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10sp"
            android:layout_marginBottom="20sp"
            app:strokeWidth="1sp"
            app:strokeColor="@color/yellow_7d"
            android:layout_marginHorizontal="15sp"

            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10sp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="5sp">
                <ImageView
                    android:layout_width="24sp"
                    android:layout_height="24sp"
                    android:src="@drawable/username_icon"
                    android:layout_marginRight="10sp"/>
                <EditText
                    android:id="@+id/etCode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:background="@android:color/transparent"
                    android:hint="@string/write_code"
                    android:imeOptions="actionDone"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10sp"
            android:layout_marginBottom="20sp"
            app:strokeWidth="1sp"
            app:strokeColor="@color/yellow_7d"
            android:layout_marginHorizontal="15sp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10sp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="5sp">
                <ImageView
                    android:layout_width="24sp"
                    android:layout_height="24sp"
                    android:src="@drawable/key_icon"
                    android:layout_marginRight="10sp"/>
                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:background="@android:color/transparent"
                    android:hint="@string/login_password"
                    android:imeOptions="actionDone"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvPassword1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10sp"
            android:layout_marginBottom="25sp"
            app:strokeWidth="1sp"
            app:strokeColor="@color/yellow_7d"
            android:layout_marginHorizontal="15sp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10sp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="5sp">
                <ImageView
                    android:layout_width="24sp"
                    android:layout_height="24sp"
                    android:src="@drawable/key_icon"
                    android:layout_marginRight="10sp"/>
                <EditText
                    android:id="@+id/etPassword1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:background="@android:color/transparent"
                    android:hint="@string/re_login_password"
                    android:imeOptions="actionDone"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green_92"
            android:layout_marginHorizontal="15sp"
            app:cardCornerRadius="10sp"
            android:layout_marginBottom="15sp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_save"
                style="@style/bold_large"
                android:textColor="@color/white"
                android:gravity="center"
                android:paddingVertical="7sp"/>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
</RelativeLayout>