<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="10sp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medicine"
            style="@style/bold_medium"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="15sp"/>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvNameMedicine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10sp"
            android:layout_marginBottom="15sp"
            app:strokeWidth="1sp"
            app:strokeColor="@color/yellow_7d"
            android:layout_marginHorizontal="5sp"
            android:layout_marginTop="5sp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10sp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="5sp">
                <ImageView
                    android:layout_width="24sp"
                    android:layout_height="24sp"
                    android:src="@drawable/weight_icon"
                    android:layout_marginRight="10sp"
                    android:layout_gravity="center"/>

                <EditText
                    android:id="@+id/nameMedicine"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:hint="@string/name_medicine"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvDateStartMedicine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10sp"
            android:layout_marginBottom="15sp"
            app:strokeWidth="1sp"
            app:strokeColor="@color/yellow_7d"
            android:layout_marginHorizontal="5sp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10sp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="5sp">
                <ImageView
                    android:layout_width="24sp"
                    android:layout_height="24sp"
                    android:src="@drawable/date_icon"
                    android:layout_marginRight="10sp"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/dateStartMedicine"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="date"
                    android:background="@android:color/transparent"
                    android:hint="@string/date_start_medicine"
                    android:imeOptions="actionDone"
                    style="@style/normal_medium"
                    />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvDateFinishMedicine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10sp"
            android:layout_marginBottom="15sp"
            app:strokeWidth="1sp"
            app:strokeColor="@color/yellow_7d"
            android:layout_marginHorizontal="5sp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10sp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="5sp">
                <ImageView
                    android:layout_width="24sp"
                    android:layout_height="24sp"
                    android:src="@drawable/date_icon"
                    android:layout_marginRight="10sp"
                    android:layout_gravity="center"/>
                <TextView
                    android:id="@+id/dateFinishMedicine"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="date"
                    android:background="@android:color/transparent"
                    android:hint="@string/date_finish_medicine"
                    android:imeOptions="actionDone"
                    style="@style/normal_medium"
                    />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/days_medicine"
            style="@style/bold_medium"
            android:layout_marginBottom="10sp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMedicineDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>