<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="10sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            style="@style/bold_medium"
            android:layout_marginBottom="10sp"
            android:layout_marginTop="15sp"/>
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10sp"
            android:layout_marginBottom="20sp"
            app:strokeWidth="1sp"
            app:strokeColor="@color/yellow_7d"
            android:layout_marginHorizontal="5sp"
            android:layout_marginTop="25sp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10sp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="5sp">
                <ImageView
                    android:layout_width="24sp"
                    android:layout_height="24sp"
                    android:src="@drawable/username_icon"
                    android:layout_marginRight="10sp"/>
                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:background="@android:color/transparent"
                    android:hint="@string/new_user_names"
                    android:imeOptions="actionDone"
                    />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10sp"
            android:layout_marginBottom="20sp"
            app:strokeWidth="1sp"
            app:strokeColor="@color/yellow_7d"
            android:layout_marginHorizontal="5sp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10sp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="5sp">
                <ImageView
                    android:layout_width="24sp"
                    android:layout_height="24sp"
                    android:src="@drawable/at_icon"
                    android:layout_marginRight="10sp"/>
                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:background="@android:color/transparent"
                    android:hint="@string/login_email"
                    android:imeOptions="actionDone"
                    />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10sp"
            android:layout_marginBottom="25sp"
            app:strokeWidth="1sp"
            app:strokeColor="@color/yellow_7d"
            android:layout_marginHorizontal="5sp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10sp"
                android:layout_gravity="center"
                android:layout_marginHorizontal="5sp">
                <ImageView
                    android:layout_width="24sp"
                    android:layout_height="24sp"
                    android:src="@drawable/key_icon"
                    android:layout_marginRight="10sp"/>
                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:background="@android:color/transparent"
                    android:hint="@string/login_password"
                    android:imeOptions="actionDone"
                    />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</RelativeLayout>